# lecture_notes_organizer

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .runner_system_id  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  pyproject.toml  requirements.txt  task_progress.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.gitlab/issue_templates/: default.md
.specify/: constitution.md
.specify/memory/: constitution.md
.specify/templates/: feature.md  plan-template.md  spec-template.md  tasks-template.md
docs/: CHECKS.md  SPECIFICATION.md  WORK_DIVISION.md  testing-report-web.md
specs/: 2024-08-multilingual-support.md  lecture-ingestion.spec.md
specs/lecture-ingestion/: plan.md  spec.md  tasks.md
src/: __init__.py  app.py
src/ai/: __init__.py  model_manager.py  prompt_templates.py
src/ingestion/: docx_extractor.py  ocr_processor.py  pdf_extractor.py  pptx_extractor.py  txt_extractor.py
src/preprocessing/: text_cleaner.py
src/storage/: __init__.py  _db.py  database.py  database_new.py  models.py
src/ui/: theme.py
src/ui/components/: dashboard.py  note_card.py  page_header.py  sidebar.py
src/ui/pages/: __init__.py  flashcards.py  search.py  settings.py  system_status.py  upload.py  view_notes.py
src/utils/: __init__.py  config.py  exceptions.py  integrations.py  translations.py  validators.py
tests/: conftest.py
tests/test_ai/: test_model_manager.py  test_prompt_templates.py
tests/test_ingestion/: test_docx_extractor.py  test_ocr_processor.py  test_pdf_extractor.py  test_pptx_extractor.py  test_txt_extractor.py
tests/test_preprocessing/: test_text_cleaner.py
tests/test_storage/: __init__.py  test_database.py  test_models.py
tests/test_ui/: test_app.py  test_components_and_pages.py  test_note_card.py  test_settings.py  test_upload.py
tests/test_utils/: test_config.py  test_exceptions.py  test_integrations.py  test_translations.py  test_validators.py
translations/: en.json  hi.json  te.json
