[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lecture-notes-organizer"
version = "0.1.0"
description = "Offline AI Lecture Notes Organizer - CPU-First Hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
keywords = ["lecture-notes", "offline-ai", "cpu-first", "hackathon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.9",
    "bandit>=1.7",
    "vulture>=2.11",
    "pre-commit>=3.7",
]
ocr = ["pytesseract>=0.3.10"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
