[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lecture-notes-organizer"
version = "0.1.0"
description = "An offline, CPU-first AI-powered lecture notes organizer that uses NLP and clustering to automatically categorize and summarize lecture content."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
keywords = ["lecture-notes", "offline-ai", "cpu-first", "hackathon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.9",
    "bandit>=1.7",
    "vulture>=2.11",
    "pre-commit>=3.7",
]
ocr = ["pytesseract>=0.3.10"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
follow_imports = "silent"
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = false
show_error_codes = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
".venv",
".git",
".mypy_cache",
".pytest_cache",
".ruff_cache",
"data",
"logs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint.main]
jobs = 0

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "import-outside-toplevel",
    "broad-exception-caught",
    "logging-fstring-interpolation",
    "unused-argument",
    "protected-access",
    "duplicate-code",
    "wrong-import-position",
    "unexpected-keyword-arg",
    "no-member",
    "consider-using-f-string",
    "too-many-return-statements",
    "invalid-name",
    "global-statement",
]
